web redesign: fix spacing under search box (#21604)
- Fixes #21512, margin under search box is now uniform 0.5rem across search results and file pages
- Tweaked spacing in repo header component to match designs
- Reduced the height of the extension button toggle to fit it into the bar
- Remove spacing to the left of the first tab in a tab bar

--- a/client/web/src/extensions/components/ActionItemsBar.scss
+++ b/client/web/src/extensions/components/ActionItemsBar.scss
@@ -32,6 +32,8 @@ $default-icon-colors: $oc-grape-7, $oc-violet-7, $oc-cyan-9, $oc-indigo-7, $oc-p
 
         .theme-redesign & {
             background-color: var(--body-bg);
+            padding-top: 0;
+            padding-bottom: 0;
         }
 
         &--open {
@@ -77,6 +79,12 @@ $default-icon-colors: $oc-grape-7, $oc-violet-7, $oc-cyan-9, $oc-indigo-7, $oc-p
 
         border-radius: 2px;
         background-color: var(--border-color);
+
+        .theme-redesign & {
+            position: static;
+            transform: none;
+            align-self: center;
+        }
     }
 
     &__list {
@@ -110,6 +118,13 @@ $default-icon-colors: $oc-grape-7, $oc-violet-7, $oc-cyan-9, $oc-indigo-7, $oc-p
 
         &:hover {
             background-color: var(--link-hover-bg-color);
+        }
+
+        &--toggle {
+            .theme-redesign & {
+                height: auto;
+                padding: 0.25rem;
+            }
         }
 
         &--pressed {
