--- a/client/web/src/search/results/streaming/sidebar/SearchSidebar.module.scss
+++ b/client/web/src/search/results/streaming/sidebar/SearchSidebar.module.scss
@@ -1,7 +1,7 @@
 @import 'wildcard/src/global-styles/breakpoints';
 
 .search-sidebar {
-    padding: 0.5rem 1rem;
+    padding: 0 1rem;
     width: 17.5rem;
     flex-shrink: 0;
 
